# 12-Factor_app

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wine_quality_prediction.ipynb
.github/workflows/: cicd.yml
.github/workflows/ci/: cd.yml
12_factor_app/: __init__.py  dataset.py  features.py  plots.py
12_factor_app/modeling/: predict.py  train.py
app/: main.py  model.py  schemas.py  utils.py
models/: wine_predictor.joblib
tests/: test_main.py
