[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "12_factor_app"
version = "0.0.1"
description = "Application of 12 factor principles to develop a Fastapi app"
authors = [
  { name = "Rup Jung Malla" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["12_factor_app"]
include = ["pyproject.toml", "12_factor_app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["12_factor_app"]
force-sort-within-sections = true

